updated pom.xml for added jars

--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,28 @@
             <version>1.2.14</version>
             <systemPath>${lib.path}/log4j.jar</systemPath>
         </dependency>
+
+        <dependency>
+            <groupId>com.newgen</groupId>
+            <artifactId>ISPack</artifactId>
+            <scope>system</scope>
+            <version>1</version>
+            <systemPath>${lib.path}/ISPack.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>com.newgen</groupId>
+            <artifactId>jdts</artifactId>
+            <scope>system</scope>
+            <version>1</version>
+            <systemPath>${lib.path}/jdts.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>com.newgen</groupId>
+            <artifactId>nsms</artifactId>
+            <scope>system</scope>
+            <version>1</version>
+            <systemPath>${lib.path}/nsms.jar</systemPath>
+        </dependency>
 	</dependencies>
 
 	<build>
