--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,8 @@ spring.profile.active=default
 newgen.cayman.connect.cabinet.username=liferay
 newgen.cayman.connect.cabinet.password=Lifer@y1
 newgen.cayman.connect.cabinet.cabinetName=worcuat
+newgen.cayman.connect.cabinet.siteIP=127.0.0.1
+newgen.cayman.connect.cabinet.sitePort=8080
 newgen.cayman.connect.cabinet.jtsIP=127.0.0.1
 newgen.cayman.connect.cabinet.jtsPort=3333
 newgen.cayman.connect.cabinet.mainGroupIndex=0
