completed working API

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,19 @@
 spring.application=name=caymen-document-api
 server.port=8081
 logging.file.name=./logs/log.log
-logging.level.com.newgen.cig.cayman=info
+logging.level.com.newgen.cig.cayman=debug
 
 spring.profile.active=default
 
 newgen.cayman.connect.cabinet.username=liferay
 newgen.cayman.connect.cabinet.password=Lifer@y1
 newgen.cayman.connect.cabinet.cabinetName=worcuat
+newgen.cayman.connect.cabinet.site=http://
 newgen.cayman.connect.cabinet.siteIP=127.0.0.1
-newgen.cayman.connect.cabinet.sitePort=3333
+newgen.cayman.connect.cabinet.sitePort=8080
+newgen.cayman.connect.cabinet.siteURI=/OmniDocsRestWS/rest/services
+newgen.cayman.connect.cabinet.site.document.request=/getDocumentJSON
+newgen.cayman.connect.cabinet.site.api.request.json=/executeAPIJSON
 newgen.cayman.connect.cabinet.jtsIP=127.0.0.1
 newgen.cayman.connect.cabinet.jtsPort=3333
 newgen.cayman.connect.cabinet.mainGroupIndex=0
