FEAT: Added security services

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application=name=caymen-document-api
+spring.application.name=caymen-document-api
 server.port=8081
 logging.file.name=./logs/log.log
 logging.level.com.newgen.cig.cayman=debug
@@ -21,6 +21,6 @@ newgen.cayman.connect.cabinet.userExists=N
 newgen.cayman.connect.cabinet.siteId=1
 newgen.cayman.connect.cabinet.volumeId=1
 
-
+my.security.aes-secret=b229ad1a61e8a680a31a646cd634dbb1
 
 
