UPDATE: updated .gitignore

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=caymen-document-api
 server.port=8081
-logging.file.name=./logs/log.log
+logging.file.name=./${spring.application.name}-logs/${spring.application.name}.log
 logging.level.com.newgen.cig.cayman=debug
 
 spring.profile.active=default
