--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 spring.application.name=caymen-document-api
 server.port=8081
 logging.file.name=./${spring.application.name}-logs/${spring.application.name}.log
-logging.level.com.newgen.cig.cayman=debug
+logging.level.com.newgen.cig.cayman.document=info
 
 spring.profile.active=default
 
-newgen.cayman.connect.cabinet.username=liferay
-newgen.cayman.connect.cabinet.password=Lifer@y1
+newgen.cayman.connect.cabinet.username=ENC(z6idj4u7Bfoaftw6QFZpweVVPvfaOBCQ8Jpv8DkMRIMmFzc=)
+newgen.cayman.connect.cabinet.password=ENC(hjOpOkt6fChqyRC8WPtO9SbqCYVRYvElyXfGsfp9tAcU1rPd)
 newgen.cayman.connect.cabinet.cabinetName=worcuat
 newgen.cayman.connect.cabinet.site=http://
 newgen.cayman.connect.cabinet.siteIP=127.0.0.1
@@ -20,6 +20,9 @@ newgen.cayman.connect.cabinet.mainGroupIndex=0
 newgen.cayman.connect.cabinet.userExists=N
 newgen.cayman.connect.cabinet.siteId=1
 newgen.cayman.connect.cabinet.volumeId=1
+
+rate.limit.capacity=100
+rate.limit.duration.minutes=1
 
 my.security.aes-secret=b229ad1a61e8a680a31a646cd634dbb1
 
