DOC: Added documentation on classes and made more robust loggers

--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,11 @@
 		<license/>
 	</licenses>
 	<developers>
-		<developer/>
+		<developer>
+			<id>tarun.vishwakarma</id>
+			<name>Tarun Vishwakarma</name>
+			<email>tarun.vishwakarma@newgensoft.com</email>
+		</developer>
 	</developers>
 	<scm>
 		<connection/>
@@ -100,6 +104,26 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>3.10.0</version>
+				<configuration>
+					<source>${java.version}</source>
+					<show>protected</show>
+					<failOnError>false</failOnError>
+					<doclint>none</doclint>
+					<additionalOptions>-Xdoclint:none</additionalOptions>
+				</configuration>
+				<executions>
+					<execution>
+						<id>attach-javadocs</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
