--- a/pom.xml
+++ b/pom.xml
@@ -1,41 +1,39 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.5.6</version>
-		<relativePath/> <!-- lookup parent from repository -->
-	</parent>
-	<groupId>com.newgen.cig.cayman.document</groupId>
-	<artifactId>caymen-document-api</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<name>caymen-document-api</name>
-	<description>Demo project for Spring Boot</description>
-	<url/>
-	<licenses>
-		<license/>
-	</licenses>
-	<developers>
-		<developer>
-			<id>tarun.vishwakarma</id>
-			<name>Tarun Vishwakarma</name>
-			<email>tarun.vishwakarma@newgensoft.com</email>
-		</developer>
-	</developers>
-	<scm>
-		<connection/>
-		<developerConnection/>
-		<tag/>
-		<url/>
-	</scm>
-	<properties>
-		<java.version>17</java.version>
-        <!--including localjars-->
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>3.5.6</version>
+        <relativePath/> </parent>
+    <groupId>com.newgen.cig.cayman.document</groupId>
+    <artifactId>caymen-document-api</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <name>caymen-document-api</name>
+    <description>Demo project for Spring Boot</description>
+    <url/>
+    <licenses>
+        <license/>
+    </licenses>
+    <developers>
+        <developer>
+            <id>tarun.vishwakarma</id>
+            <name>Tarun Vishwakarma</name>
+            <email>tarun.vishwakarma@newgensoft.com</email>
+        </developer>
+    </developers>
+    <scm>
+        <connection/>
+        <developerConnection/>
+        <tag/>
+        <url/>
+    </scm>
+    <properties>
+        <java.version>17</java.version>
         <lib.path>${project.basedir}/libs</lib.path>
-	</properties>
-	<dependencies>
+    </properties>
+    <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
@@ -62,13 +60,11 @@
             <artifactId>caffeine</artifactId>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/javax.servlet/servlet-api -->
         <dependency>
             <groupId>jakarta.servlet</groupId>
             <artifactId>jakarta.servlet-api</artifactId>
         </dependency>
 
-        <!-- local JAR dependencies -->
         <dependency>
             <groupId>com.newgen</groupId>
             <artifactId>odweb</artifactId>
@@ -77,55 +73,65 @@
             <systemPath>${lib.path}/odweb.jar</systemPath>
         </dependency>
         <dependency>
-            <groupId>com.newgen</groupId>
+            <groupId>com.newgen.jtssessionbean</groupId>
             <artifactId>jtssessionbean</artifactId>
             <scope>system</scope>
             <version>1</version>
             <systemPath>${lib.path}/jtssessionbean.jar</systemPath>
         </dependency>
         <dependency>
-            <groupId>com.newgen</groupId>
+            <groupId>com.newgen.ejbclient</groupId>
             <artifactId>ejbclient</artifactId>
             <scope>system</scope>
             <version>1</version>
             <systemPath>${lib.path}/ejbclient.jar</systemPath>
         </dependency>
         <dependency>
-            <groupId>com.newgen</groupId>
+            <groupId>com.newgen.log4j</groupId>
             <artifactId>log4j</artifactId>
             <scope>system</scope>
             <version>1.2.14</version>
             <systemPath>${lib.path}/log4j.jar</systemPath>
         </dependency>
-	</dependencies>
+    </dependencies>
 
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>3.10.0</version>
-				<configuration>
-					<source>${java.version}</source>
-					<show>protected</show>
-					<failOnError>false</failOnError>
-					<doclint>none</doclint>
-					<additionalOptions>-Xdoclint:none</additionalOptions>
-				</configuration>
-				<executions>
-					<execution>
-						<id>attach-javadocs</id>
-						<goals>
-							<goal>jar</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-		</plugins>
-	</build>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <includeSystemScope>true</includeSystemScope>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>3.10.0</version>
+                <configuration>
+                    <source>${java.version}</source>
+                    <show>protected</show>
+                    <failOnError>false</failOnError>
+                    <doclint>none</doclint>
+                    <additionalOptions>-Xdoclint:none</additionalOptions>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>attach-javadocs</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
